--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Weather</string>
+    <string name="min">min</string>
+    <string name="current">Current</string>
+    <string name="max">max</string>
 </resources>
