--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="min">min</string>
     <string name="current">Current</string>
     <string name="max">max</string>
+    <string name="menu_button">Menu Button</string>
 </resources>
