--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="current">Current</string>
     <string name="max">max</string>
     <string name="menu_button">Menu Button</string>
+    <string name="error_message">Something went wrong</string>
 </resources>
