--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
-    <string name="app_name">Weather</string>
+    <string name="app_name">Weather Steve</string>
     <string name="min">min</string>
     <string name="current">Current</string>
     <string name="max">max</string>
     <string name="menu_button">Menu Button</string>
     <string name="error_message">Something went wrong</string>
-    <string name="loading">Loading...</string>
+    <string name="loading">Loading…</string>
     <string name="weather_error_text">Couldn\'t get Current Weather</string>
     <string name="forecast_error_text">Couldn\'t get forecast</string>
 </resources>
